// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseButton renders with fallback formatting 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  box-sizing: border-box;
  margin: 8px 0;
}

.emotion-1:disabled {
  cursor: not-allowed;
}

.emotion-1::before {
  content: '';
  position: absolute;
  left: 0;
  top: -8px;
  width: 100%;
  height: 48px;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

<button
    class="emotion-1"
    type="button"
  >
    <div
      class="emotion-0"
    />
  </button>
</DocumentFragment>
`;

exports[`Button IconButton renders Icon Button in loading State 1`] = `
<DocumentFragment>
  .emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-6 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  will-change: transform;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  -webkit-animation: fills-outer-rotate 1.4s cubic-bezier(0.25,0.78,0.48,0.89) infinite;
  animation: fills-outer-rotate 1.4s cubic-bezier(0.25,0.78,0.48,0.89) infinite;
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
}

.emotion-10 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: disabled;
  box-sizing: border-box;
  background-color: #d5ebff;
  border-radius: 50%;
  color: #FFFFFF;
  min-height: 16px;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding: 16px;
  width: 64px;
  height: 64px;
}

.emotion-10:disabled {
  cursor: not-allowed;
}

.emotion-10 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

.emotion-10 svg {
  width: 32px;
  height: 32px;
}

.emotion-7 {
  height: 32px;
  width: 32px;
  position: relative;
}

.emotion-2 {
  box-sizing: border-box;
  width: calc( 32px / 2 );
  height: 32px;
  -webkit-transform-origin: 100% center;
  -ms-transform-origin: 100% center;
  transform-origin: 100% center;
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
  overflow: hidden;
  position: absolute;
}

.emotion-1 {
  width: calc( 32px / 2 );
  height: 32px;
  -webkit-transform-origin: 100% center;
  -ms-transform-origin: 100% center;
  transform-origin: 100% center;
  overflow: hidden;
  will-change: transform;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  -webkit-animation: left-wobble 1.4s linear infinite;
  animation: left-wobble 1.4s linear infinite;
}

.emotion-0 {
  box-sizing: border-box;
  height: 32px;
  width: 32px;
  border-color: #0A68C1;
  border-style: solid;
  border-width: 2px;
  border-radius: 20rem;
  border-radius: 50%;
}

.emotion-5 {
  box-sizing: border-box;
  width: calc( 32px / 2 );
  height: 32px;
  -webkit-transform-origin: 100% center;
  -ms-transform-origin: 100% center;
  transform-origin: 100% center;
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
  overflow: hidden;
  position: absolute;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

.emotion-4 {
  width: calc( 32px / 2 );
  height: 32px;
  -webkit-transform-origin: 100% center;
  -ms-transform-origin: 100% center;
  transform-origin: 100% center;
  overflow: hidden;
  will-change: transform;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  -webkit-animation: left-wobble 1.4s linear infinite;
  animation: left-wobble 1.4s linear infinite;
  -webkit-animation: right-wobble 1.4s linear infinite;
  animation: right-wobble 1.4s linear infinite;
}

<button
    class="emotion-10"
    type="button"
  >
    <div
      class="emotion-9"
    >
      <div
        class="emotion-8"
      >
        <div
          aria-label="loading"
          class="emotion-7"
        >
          <div
            class="emotion-6"
          >
            <div
              class="emotion-2"
            >
              <div
                class="emotion-1"
              >
                <div
                  class="emotion-0"
                />
              </div>
            </div>
            <div
              class="emotion-5"
            >
              <div
                class="emotion-4"
              >
                <div
                  class="emotion-0"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button IconButton renders Icon Button with fallback formatting 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-3 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  box-sizing: border-box;
  background-color: #0A68C1;
  border-radius: 50%;
  color: #FFFFFF;
  min-height: 8px;
  font-family: "Noto Sans",sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding: 8px;
  width: 32px;
  height: 32px;
  margin: 8px 0;
}

.emotion-3:disabled {
  cursor: not-allowed;
}

.emotion-3 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

.emotion-3:hover:not(:disabled) {
  background-color: #02509B;
  box-shadow: 0 0 1px 0 rgba(40,41,61,0.04),0 2px 4px 0 rgba(96,97,112,0.16);
}

.emotion-3:active:not(:disabled) {
  background-color: #01396E;
}

.emotion-3:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-3:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-3 svg {
  width: 16px;
  height: 16px;
}

.emotion-3::before {
  content: '';
  position: absolute;
  left: 0;
  top: -8px;
  width: 100%;
  height: 48px;
}

.emotion-0 {
  fill: #2e2e2e;
  color: #2e2e2e;
  display: inline-block;
}

<button
    class="emotion-3"
    type="button"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-1"
      >
        <svg
          aria-labelledby="mock-bui-1"
          class="emotion-0"
          viewBox="0 0 24 24"
        >
          <title
            id="mock-bui-1"
          >
            Email icon
          </title>
          <path
            d="M20,4 L4,4 C2.9,4 2.01,4.9 2.01,6 L2,18 C2,19.1 2.9,20 4,20 L20,20 C21.1,20 22,19.1 22,18 L22,6 C22,4.9 21.1,4 20,4 L20,4 Z M20,8 L12,13 L4,8 L4,6 L12,11 L20,6 L20,8 L20,8 Z"
          />
        </svg>
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button IconButton renders Large Icon Button 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-0 {
  fill: #2e2e2e;
  color: #2e2e2e;
  display: inline-block;
}

.emotion-3 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  box-sizing: border-box;
  background-color: #0A68C1;
  border-radius: 50%;
  color: #FFFFFF;
  min-height: 16px;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding: 16px;
  width: 64px;
  height: 64px;
}

.emotion-3:disabled {
  cursor: not-allowed;
}

.emotion-3 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

.emotion-3:hover:not(:disabled) {
  background-color: #02509B;
  box-shadow: 0 0 1px 0 rgba(40,41,61,0.04),0 2px 4px 0 rgba(96,97,112,0.16);
}

.emotion-3:active:not(:disabled) {
  background-color: #01396E;
}

.emotion-3:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-3:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-3 svg {
  width: 32px;
  height: 32px;
}

<button
    class="emotion-3"
    type="button"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-1"
      >
        <svg
          aria-labelledby="mock-bui-1"
          class="emotion-0"
          viewBox="0 0 24 24"
        >
          <title
            id="mock-bui-1"
          >
            Email icon
          </title>
          <path
            d="M20,4 L4,4 C2.9,4 2.01,4.9 2.01,6 L2,18 C2,19.1 2.9,20 4,20 L20,20 C21.1,20 22,19.1 22,18 L22,6 C22,4.9 21.1,4 20,4 L20,4 Z M20,8 L12,13 L4,8 L4,6 L12,11 L20,6 L20,8 L20,8 Z"
          />
        </svg>
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button IconButton renders Medium Icon Button 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-0 {
  fill: #2e2e2e;
  color: #2e2e2e;
  display: inline-block;
}

.emotion-3 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  box-sizing: border-box;
  background-color: #0A68C1;
  border-radius: 50%;
  color: #FFFFFF;
  min-height: 12px;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding: 12px;
  width: 48px;
  height: 48px;
}

.emotion-3:disabled {
  cursor: not-allowed;
}

.emotion-3 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

.emotion-3:hover:not(:disabled) {
  background-color: #02509B;
  box-shadow: 0 0 1px 0 rgba(40,41,61,0.04),0 2px 4px 0 rgba(96,97,112,0.16);
}

.emotion-3:active:not(:disabled) {
  background-color: #01396E;
}

.emotion-3:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-3:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-3 svg {
  width: 24px;
  height: 24px;
}

<button
    class="emotion-3"
    type="button"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-1"
      >
        <svg
          aria-labelledby="mock-bui-1"
          class="emotion-0"
          viewBox="0 0 24 24"
        >
          <title
            id="mock-bui-1"
          >
            Email icon
          </title>
          <path
            d="M20,4 L4,4 C2.9,4 2.01,4.9 2.01,6 L2,18 C2,19.1 2.9,20 4,20 L20,20 C21.1,20 22,19.1 22,18 L22,6 C22,4.9 21.1,4 20,4 L20,4 Z M20,8 L12,13 L4,8 L4,6 L12,11 L20,6 L20,8 L20,8 Z"
          />
        </svg>
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button IconButton renders Small Icon Button 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-3 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  box-sizing: border-box;
  background-color: #0A68C1;
  border-radius: 50%;
  color: #FFFFFF;
  min-height: 8px;
  font-family: "Noto Sans",sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding: 8px;
  width: 32px;
  height: 32px;
  margin: 8px 0;
}

.emotion-3:disabled {
  cursor: not-allowed;
}

.emotion-3 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

.emotion-3:hover:not(:disabled) {
  background-color: #02509B;
  box-shadow: 0 0 1px 0 rgba(40,41,61,0.04),0 2px 4px 0 rgba(96,97,112,0.16);
}

.emotion-3:active:not(:disabled) {
  background-color: #01396E;
}

.emotion-3:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-3:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-3 svg {
  width: 16px;
  height: 16px;
}

.emotion-3::before {
  content: '';
  position: absolute;
  left: 0;
  top: -8px;
  width: 100%;
  height: 48px;
}

.emotion-0 {
  fill: #2e2e2e;
  color: #2e2e2e;
  display: inline-block;
}

<button
    class="emotion-3"
    type="button"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-1"
      >
        <svg
          aria-labelledby="mock-bui-1"
          class="emotion-0"
          viewBox="0 0 24 24"
        >
          <title
            id="mock-bui-1"
          >
            Email icon
          </title>
          <path
            d="M20,4 L4,4 C2.9,4 2.01,4.9 2.01,6 L2,18 C2,19.1 2.9,20 4,20 L20,20 C21.1,20 22,19.1 22,18 L22,6 C22,4.9 21.1,4 20,4 L20,4 Z M20,8 L12,13 L4,8 L4,6 L12,11 L20,6 L20,8 L20,8 Z"
          />
        </svg>
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button IconButton renders when there is an icon with a colour 1`] = `
<DocumentFragment>
  .emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-4 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  box-sizing: border-box;
  background-color: #0A68C1;
  border-radius: 50%;
  color: #FFFFFF;
  min-height: 8px;
  font-family: "Noto Sans",sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding: 8px;
  width: 32px;
  height: 32px;
  margin: 8px 0;
}

.emotion-4:disabled {
  cursor: not-allowed;
}

.emotion-4 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

.emotion-4:hover:not(:disabled) {
  background-color: #02509B;
  box-shadow: 0 0 1px 0 rgba(40,41,61,0.04),0 2px 4px 0 rgba(96,97,112,0.16);
}

.emotion-4:active:not(:disabled) {
  background-color: #01396E;
}

.emotion-4:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-4:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-4 svg {
  width: 16px;
  height: 16px;
}

.emotion-4::before {
  content: '';
  position: absolute;
  left: 0;
  top: -8px;
  width: 100%;
  height: 48px;
}

.emotion-0 {
  fill: #2e2e2e;
  color: #2e2e2e;
  display: inline-block;
}

<button
    class="emotion-4"
    type="button"
  >
    <div
      class="emotion-3"
    >
      <div
        class="emotion-1"
      >
        <svg
          aria-labelledby="mock-bui-1"
          class="emotion-0"
          viewBox="0 0 24 24"
        >
          <title
            id="mock-bui-1"
          >
            Email icon
          </title>
          <path
            d="M20,4 L4,4 C2.9,4 2.01,4.9 2.01,6 L2,18 C2,19.1 2.9,20 4,20 L20,20 C21.1,20 22,19.1 22,18 L22,6 C22,4.9 21.1,4 20,4 L20,4 Z M20,8 L12,13 L4,8 L4,6 L12,11 L20,6 L20,8 L20,8 Z"
          />
        </svg>
      </div>
      <div
        class="emotion-1"
      >
        click this!
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button Loading Button renders Large Button 1`] = `
<DocumentFragment>
  .emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-6 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  will-change: transform;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  -webkit-animation: fills-outer-rotate 1.4s cubic-bezier(0.25,0.78,0.48,0.89) infinite;
  animation: fills-outer-rotate 1.4s cubic-bezier(0.25,0.78,0.48,0.89) infinite;
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
}

.emotion-10 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: disabled;
  box-sizing: border-box;
  background-color: #d5ebff;
  color: #FFFFFF;
  border-radius: 8px;
  min-height: 12px;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding: 12px 16px;
}

.emotion-10:disabled {
  cursor: not-allowed;
}

.emotion-10 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

.emotion-10 svg {
  width: 24px;
  height: 24px;
}

.emotion-7 {
  height: 24px;
  width: 24px;
  position: relative;
}

.emotion-2 {
  box-sizing: border-box;
  width: calc( 24px / 2 );
  height: 24px;
  -webkit-transform-origin: 100% center;
  -ms-transform-origin: 100% center;
  transform-origin: 100% center;
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
  overflow: hidden;
  position: absolute;
}

.emotion-1 {
  width: calc( 24px / 2 );
  height: 24px;
  -webkit-transform-origin: 100% center;
  -ms-transform-origin: 100% center;
  transform-origin: 100% center;
  overflow: hidden;
  will-change: transform;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  -webkit-animation: left-wobble 1.4s linear infinite;
  animation: left-wobble 1.4s linear infinite;
}

.emotion-0 {
  box-sizing: border-box;
  height: 24px;
  width: 24px;
  border-color: #0A68C1;
  border-style: solid;
  border-width: 2px;
  border-radius: 20rem;
  border-radius: 50%;
}

.emotion-5 {
  box-sizing: border-box;
  width: calc( 24px / 2 );
  height: 24px;
  -webkit-transform-origin: 100% center;
  -ms-transform-origin: 100% center;
  transform-origin: 100% center;
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
  overflow: hidden;
  position: absolute;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

.emotion-4 {
  width: calc( 24px / 2 );
  height: 24px;
  -webkit-transform-origin: 100% center;
  -ms-transform-origin: 100% center;
  transform-origin: 100% center;
  overflow: hidden;
  will-change: transform;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  -webkit-animation: left-wobble 1.4s linear infinite;
  animation: left-wobble 1.4s linear infinite;
  -webkit-animation: right-wobble 1.4s linear infinite;
  animation: right-wobble 1.4s linear infinite;
}

<button
    class="emotion-10"
    type="button"
  >
    <div
      class="emotion-9"
    >
      <div
        class="emotion-8"
      >
        <div
          aria-label="loading"
          class="emotion-7"
        >
          <div
            class="emotion-6"
          >
            <div
              class="emotion-2"
            >
              <div
                class="emotion-1"
              >
                <div
                  class="emotion-0"
                />
              </div>
            </div>
            <div
              class="emotion-5"
            >
              <div
                class="emotion-4"
              >
                <div
                  class="emotion-0"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button Loading Button renders Small Button 1`] = `
<DocumentFragment>
  .emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-10 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: disabled;
  box-sizing: border-box;
  background-color: #d5ebff;
  color: #FFFFFF;
  border-radius: 8px;
  min-height: 8px;
  font-family: "Noto Sans",sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding: 8px 12px;
  margin: 8px 0;
}

.emotion-10:disabled {
  cursor: not-allowed;
}

.emotion-10 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

.emotion-10 svg {
  width: 16px;
  height: 16px;
}

.emotion-10::before {
  content: '';
  position: absolute;
  left: 0;
  top: -8px;
  width: 100%;
  height: 48px;
}

.emotion-7 {
  height: 16px;
  width: 16px;
  position: relative;
}

.emotion-6 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  will-change: transform;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  -webkit-animation: fills-outer-rotate 1.4s cubic-bezier(0.25,0.78,0.48,0.89) infinite;
  animation: fills-outer-rotate 1.4s cubic-bezier(0.25,0.78,0.48,0.89) infinite;
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
}

.emotion-2 {
  box-sizing: border-box;
  width: calc( 16px / 2 );
  height: 16px;
  -webkit-transform-origin: 100% center;
  -ms-transform-origin: 100% center;
  transform-origin: 100% center;
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
  overflow: hidden;
  position: absolute;
}

.emotion-1 {
  width: calc( 16px / 2 );
  height: 16px;
  -webkit-transform-origin: 100% center;
  -ms-transform-origin: 100% center;
  transform-origin: 100% center;
  overflow: hidden;
  will-change: transform;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  -webkit-animation: left-wobble 1.4s linear infinite;
  animation: left-wobble 1.4s linear infinite;
}

.emotion-0 {
  box-sizing: border-box;
  height: 16px;
  width: 16px;
  border-color: #0A68C1;
  border-style: solid;
  border-width: 2px;
  border-radius: 20rem;
  border-radius: 50%;
}

.emotion-5 {
  box-sizing: border-box;
  width: calc( 16px / 2 );
  height: 16px;
  -webkit-transform-origin: 100% center;
  -ms-transform-origin: 100% center;
  transform-origin: 100% center;
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
  overflow: hidden;
  position: absolute;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

.emotion-4 {
  width: calc( 16px / 2 );
  height: 16px;
  -webkit-transform-origin: 100% center;
  -ms-transform-origin: 100% center;
  transform-origin: 100% center;
  overflow: hidden;
  will-change: transform;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  -webkit-animation: left-wobble 1.4s linear infinite;
  animation: left-wobble 1.4s linear infinite;
  -webkit-animation: right-wobble 1.4s linear infinite;
  animation: right-wobble 1.4s linear infinite;
}

<button
    class="emotion-10"
    type="button"
  >
    <div
      class="emotion-9"
    >
      <div
        class="emotion-8"
      >
        <div
          aria-label="loading"
          class="emotion-7"
        >
          <div
            class="emotion-6"
          >
            <div
              class="emotion-2"
            >
              <div
                class="emotion-1"
              >
                <div
                  class="emotion-0"
                />
              </div>
            </div>
            <div
              class="emotion-5"
            >
              <div
                class="emotion-4"
              >
                <div
                  class="emotion-0"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button renders Large Button 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-1 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  box-sizing: border-box;
  background-color: #0A68C1;
  color: #FFFFFF;
  border-radius: 8px;
  min-height: 12px;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding: 12px 16px;
}

.emotion-1:disabled {
  cursor: not-allowed;
}

.emotion-1 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

.emotion-1:hover:not(:disabled) {
  background-color: #02509B;
}

.emotion-1:active:not(:disabled) {
  background-color: #01396E;
}

.emotion-1:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-1:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-1 svg {
  width: 24px;
  height: 24px;
}

<button
    class="emotion-1"
    type="button"
  >
    <div
      class="emotion-0"
    />
  </button>
</DocumentFragment>
`;

exports[`Button renders Small Button 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-1 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  box-sizing: border-box;
  background-color: #0A68C1;
  color: #FFFFFF;
  border-radius: 8px;
  min-height: 8px;
  font-family: "Noto Sans",sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding: 8px 12px;
  margin: 8px 0;
}

.emotion-1:disabled {
  cursor: not-allowed;
}

.emotion-1 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

.emotion-1:hover:not(:disabled) {
  background-color: #02509B;
}

.emotion-1:active:not(:disabled) {
  background-color: #01396E;
}

.emotion-1:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-1:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-1 svg {
  width: 16px;
  height: 16px;
}

.emotion-1::before {
  content: '';
  position: absolute;
  left: 0;
  top: -8px;
  width: 100%;
  height: 48px;
}

<button
    class="emotion-1"
    type="button"
  >
    <div
      class="emotion-0"
    />
  </button>
</DocumentFragment>
`;

exports[`Button renders when there is no icon 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-2 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  box-sizing: border-box;
  background-color: #0A68C1;
  color: #FFFFFF;
  border-radius: 8px;
  min-height: 8px;
  font-family: "Noto Sans",sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding: 8px 12px;
  margin: 8px 0;
}

.emotion-2:disabled {
  cursor: not-allowed;
}

.emotion-2 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

.emotion-2:hover:not(:disabled) {
  background-color: #02509B;
}

.emotion-2:active:not(:disabled) {
  background-color: #01396E;
}

.emotion-2:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-2:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-2 svg {
  width: 16px;
  height: 16px;
}

.emotion-2::before {
  content: '';
  position: absolute;
  left: 0;
  top: -8px;
  width: 100%;
  height: 48px;
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

<button
    class="emotion-2"
    type="button"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-0"
      >
        click this!
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button renders with different style preset 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-1 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  box-sizing: border-box;
  border-style: solid;
  border-color: #0A68C1;
  border-width: 1px;
  border-radius: 8px;
  color: #0A68C1;
  background-color: transparent;
  min-height: 8px;
  font-family: "Noto Sans",sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding: 8px 12px;
  margin: 8px 0;
}

.emotion-1:disabled {
  cursor: not-allowed;
}

.emotion-1 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-1:disabled {
  border-color: #f0f0f0;
  color: #9c9c9c;
  background-color: transparent;
}

.emotion-1:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-1 svg {
  width: 16px;
  height: 16px;
}

.emotion-1::before {
  content: '';
  position: absolute;
  left: 0;
  top: -8px;
  width: 100%;
  height: 48px;
}

<button
    class="emotion-1"
    type="button"
  >
    <div
      class="emotion-0"
    />
  </button>
</DocumentFragment>
`;

exports[`Button renders with fallback formatting 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-1 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  box-sizing: border-box;
  background-color: #0A68C1;
  color: #FFFFFF;
  border-radius: 8px;
  min-height: 8px;
  font-family: "Noto Sans",sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding: 8px 12px;
  margin: 8px 0;
}

.emotion-1:disabled {
  cursor: not-allowed;
}

.emotion-1 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

.emotion-1:hover:not(:disabled) {
  background-color: #02509B;
}

.emotion-1:active:not(:disabled) {
  background-color: #01396E;
}

.emotion-1:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-1:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-1 svg {
  width: 16px;
  height: 16px;
}

.emotion-1::before {
  content: '';
  position: absolute;
  left: 0;
  top: -8px;
  width: 100%;
  height: 48px;
}

<button
    class="emotion-1"
    type="button"
  >
    <div
      class="emotion-0"
    />
  </button>
</DocumentFragment>
`;
